@@ -4,6 +4,8 @@ CHANGES-1.4.txt
 CHANGES IN CUPS V1.4.5
 
 	- Documentation fixes (STR #3542)
+	- Custom options with missing string values caused ppdEmit* to segfault
+	  (STR #3620)
 	- Fixed an issue with the Italian version of the web interface
 	  (STR #3624)
 	- Fixed the Solaris SMF configuration file for cups-lpd (STR #3611)
